--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=""
+
 CLERK_SECRET_KEY=""
 
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
@@ -13,3 +14,7 @@ UPLOADTHING_APP_ID=""
 
 MUX_TOKEN_ID=""
 MUX_TOKEN_SECRET=""
+
+STRIPE_API_KEY=""
+NEXT_PUBLIC_APP_URL=""
+STRIPE_WEBHOOK_SECRET=""
